init-resources.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.PROD_DOMAIN`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.PROD_DOMAIN`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd.PROD_DOMAIN.cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: workflows-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`workflows.PROD_DOMAIN`)
      services:
        - name: argo-workflows-server
          port: 2746
  tls:
    secretName: workflows.PROD_DOMAIN.cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-server
  namespace: grassroots
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.PROD_DOMAIN`)
      kind: Rule
      services:
        - name: vault
          port: 8200
  tls:
    secretName: vault.PROD_DOMAIN.cert
